--- a/jinja2/_base.html.jinja2
+++ b/jinja2/_base.html.jinja2
@@ -5,7 +5,7 @@
 
 		<title>The Harvard Crimson | Class of 2018 By the Numbers</title>
 
-        <base href="http://features.thecrimson.com/2014/freshman-survey/">
+        <base href="http://localhost:8000/compiled_html/">
 
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700|Crimson|Colaborate" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" type="text/css" href="css/fresh.css">
@@ -43,8 +43,8 @@
 				<ul class="header-nav">
 					<a href=""><li{% if filename=='index' %} class="active"{% endif %}>Introduction</li></a>
                     <a href="makeup/"><li{% if filename=='makeup' %} class="active"{% endif %}>Makeup of the Class</li></a>
-                    {#<a href="admissions/"><li{% if filename=='admissions' %} class="active"{% endif %}>Admissions</li></a>
-                    <a href="academics/"><li{% if filename=='academics' %} class="active"{% endif %}>Academics/Extracurriculars</li></a>
+                    <a href="admissions/"><li{% if filename=='admissions' %} class="active"{% endif %}>Admissions</li></a>
+                    {#<a href="academics/"><li{% if filename=='academics' %} class="active"{% endif %}>Academics/Extracurriculars</li></a>
                     <a href="lifestyle/"><li{% if filename=='lifestyle' %} class="active"{% endif %}>Beliefs/Lifestyle</li></a>#}
 				</ul>
 			</div>
