enable link on index to academics

--- a/compiled_html/css/fresh.css
+++ b/compiled_html/css/fresh.css
@@ -130,11 +130,11 @@ header h1 {
 }
 
 #ac1 {
-	background-image: url('../img/academics_left_grey.jpg');
+	background-image: url('../img/academics_left.jpg');
 }
 
 #ac2 {
-	background-image: url('../img/academics_right_grey.jpg');
+	background-image: url('../img/academics_right.jpg');
 }
 
 #sex1 {
