--- a/jinja2/index.html.jinja2
+++ b/jinja2/index.html.jinja2
@@ -29,8 +29,8 @@
 		<div class="section-container">
 			<div class="survey-section">
 				<div class="subhead">Academics</div>
-				<div class="card card-disabled" id="ac1" data-destination=""><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card card-disabled" id="ac2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card" id="ac1" data-destination="academics/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
+				<div class="card" id="ac2" data-destination="academics/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 			<div class="survey-section">
 				<div class="subhead">Lifestyle</div>
