clean and caption sections 0 and 1

--- a/jinja2/academics.html.jinja2
+++ b/jinja2/academics.html.jinja2
@@ -36,27 +36,43 @@
             <li>
                 <a href="#cheating-school-type-tab" data-toggle="tab">Cheating by School Type</a>
             </li>
+            <li>
+                <a href="#cheating-recruits-tab" data-toggle="tab">Cheating by Recruit Status</a>
+            </li>
+            <li>
+                <a href="#cheating-gender-tab" data-toggle="tab">Cheating by Gender</a>
+            </li>
         </ul>
         <ul class="tab-panes">
             <li id="exam-cheaters-tab" class="active">
                 <h2>Cheating on an Exam</h2>
                 <div id="exam-cheaters" class="graph"></div>
-                <p>Ten percent of freshman respondents admitted to cheating on an exam before coming to Harvard. In comparison, 7 percent of graduating Harvard seniors surveyed by The Crimson last spring admitted to cheating on that type of assignment during their undergraduate careers.</p>
+                <p>Ten percent of respondents admitted to cheating on an exam during high school, the same percent as those who responded to last year’s survey. By comparison, 6 percent of last year’s graduating seniors who responded to The Crimson’s senior survey admitted to cheating on a paper or exam in college.</p>
             </li>
             <li id="paper-cheaters-tab">
                 <h2>Cheating on a Paper or Take-Home Assignment</h2>
                 <div id="paper-cheaters" class="graph"></div>
-                <p>Seventeen percent of freshman respondents said they had cheated on a paper or take-home assignment before coming to Harvard. In comparison, 7 percent of graduating Harvard seniors surveyed by The Crimson last spring admitted to cheating on that type of assignment during their undergraduate careers.</p>
+                <p>Ten percent of surveyed freshmen reported cheating on a paper in high school, a decrease from last year’s survey. Six percent of last year’s graduating seniors who responded to The Crimson’s senior survey admitted to cheating on a paper or exam in college.</p>
             </li>
             <li id="homework-cheaters-tab">
                 <h2>Homework or Problem Sets</h2>
                 <div id="homework-cheaters" class="graph"></div>
-                <p>A higher percentage of freshman respondents admitted to cheating on a homework assignment or problem set than on either an exam or paper or take-home assignment before coming to Harvard. In comparison, 32 percent of graduating Harvard seniors surveyed by The Crimson last spring admitted to cheating on that type of assignment during their undergraduate careers.</p>
+                <p>Twenty-two percent of respondents admitted to cheating on a problem set or homework assignment in high school, a significant decrease from last year, when 42 percent of surveyed incoming freshmen reported doing so. Fifteen percent of of last year’s graduating seniors who responded to The Crimson’s senior survey admitted to cheating on a problem set or homework assignment during their time in college.</p>
             </li>
             <li id="cheating-school-type-tab">
                 <h2>Cheating by Type of High School</h2>
                 <div id="cheating-school-type" class="graph"></div>
-                <p>Freshmen who attended public school were more likely to admit to several forms of cheating than those who attended private school. Thirteen percent of respondents who attended public school admitted to cheating on an exam, compared to 7 percent of surveyed freshmen who attended private school. One fifth of respondents who went to private school said they cheated on a paper or take-home assignment, compared to 12 percent of respondents who attended private school.</p>
+                <p>Eleven percent of respondents from public schools reported cheating on an exam and on a paper or take-home assignment, compared to 7.6 percent and 9 percent of private school students, respectively. The percentage of this year’s respondents from public school who admitted cheating on a paper or take-home assignment declined by about 9 percentage points from last year.</p>
+            </li>
+            <li id="cheating-recruits-tab">
+                <h2>Cheating by Recruit Status</h2>
+                <div id="cheating-recruits" class="graph"></div>
+                <p>Last year’s survey showed a 10 percentage point gap between the percentage of recruited athletes who admitted to cheating on a high school exam and non-athletes who admitted to doing so. This year the gap appears to have been almost nonexistent.</p>
+            </li>
+            <li id="cheating-gender-tab">
+                <h2>Cheating by Gender</h2>
+                <div id="cheating-gender" class="graph"></div>
+                <p>A higher percentage of male respondents admitted to cheating in an academic context than female respondents.</p>
             </li>
         </ul>
     </div>
@@ -68,10 +84,13 @@
                 <a href="#study-habits-past-tab" data-toggle="tab">Study Hours</a>
             </li>
             <li>
-                <a href="#math-level-tab" data-toggle="tab">Level of Math</a>
+                <a href="#pressure-tab" data-toggle="tab">Sources of Pressure</a>
             </li>
             <li>
                 <a href="#extracurriculars-tab" data-toggle="tab">Extracurriculars</a>
+            </li>
+            <li>
+                <a href="#athletics-by-income-tab" data-toggle="tab">High School Athletics by Income</a>
             </li>
             <li>
                 <a href="#leadership-tab" data-toggle="tab">Leadership</a>
@@ -79,48 +98,37 @@
             <li>
                 <a href="#government-tab" data-toggle="tab">Student Government</a>
             </li>
-            <li>
-                <a href="#math-school-type-tab" data-toggle="tab">Math by School Type</a>
-            </li>
-            <li>
-                <a href="#study-hours-school-type-tab" data-toggle="tab">Study Hours by School Type</a>
-            </li>
         </ul>
         <ul class="tab-panes">
             <li id="study-habits-past-tab" class="active">
                 <h2>Study Hours</h2>
                 <div id="study-habits-past" class="graph"></div>
-                <p>Respondents from public schools were twice as likely as their private-school peers to report that they studied for 10 or fewer hours a week in high school.</p>
+                <p>A plurality of surveyed freshmen reported studying between 11 and 19 hours in high school. These figures mirrored those of last year’s survey of the incoming Class of 2017. There was a large difference between the study habits of recruited athletes in high school and all freshman respondents, with a plurality of recruits studying 10 or fewer hours a week.</p>
             </li>
-            <li id="math-level-tab">
-                <h2>Level of Math</h2>
-                <div id="math-level" class="graph"></div>
-                <p>Forty-two percent of respondents had taken up to BC Calculus, and 32 percent up to AB Calculus. At the College, incoming freshmen are given suggestions for which math level to take based both on an online placement exam and the highest level of math they took in high school.</p>
+            <li id="pressure-tab">
+                <h2>Sources of Pressure</h2>
+                <div id="pressure" class="graph"></div>
+                <p>Like last year’s respondents, the majority of surveyed freshmen this year reported that their greatest source of pressure comes from their own expectations. Students did not appear to feel pressured from their teachers.</p>
             </li>
             <li id="extracurriculars-tab">
                 <h2>High School Extracurriculars</h2>
                 <div id="extracurriculars" class="graph"></div>
-                <p>The five most commonly reported high school extracurriculars were, in descending order, community service, athletics, music clubs or bands, student government, and math clubs or competitions.</p>
+                <p>The five most popular activities were, in descending order, community service, athletics, music clubs/bands, student government, and science clubs/competitions.</p>
+            </li>
+            <li id="athletics-by-income-tab">
+                <h2>Participation in High School Athletics by Income</h2>
+                <div id="athletics-by-income" class="graph"></div>
+                <p>Athletics was the only high school extracurricular activity in which respondents’ participation varied reliable by reported combined family income. The higher their family income bracket, the more likely respondents were to report participating in athletics in high school.</p>
             </li>
             <li id="leadership-tab">
                 <h2>High School Extracurricular Leadership</h2>
                 <div id="leadership" class="graph"></div>
-                <p>More students were the president or top leader of zero clubs in high school than six or more. At Harvard, a College survey found last spring that more than half of student organizations have leadership that is skewed toward a single gender.</p>
+                <p>The number of high school leadership positions held by respondents varied little by reported legacy status, gender, income level, or school type. The majority of respondents reported holding between one and three leadership positions in high school.</p>
             </li>
             <li id="government-tab">
                 <h2>Belief in Power of Student Government</h2>
                 <div id="government" class="graph"></div>
-                <p>The survey found that a majority of respondents believe that student government has the power to effect change. Seventy-nine percent of respondents who had been involved in student government in high school expressed faith in the ability of student government to effect change, compared to 60 percent of students who were not involved in student government.</p>
-            </li>
-            <li id="math-school-type-tab">
-                <h2>Level of Math by Type of High School</h2>
-                <div id="math-school-type" class="graph"></div>
-                <p>A plurality of students from public high schools have taken up to BC Calculus. Four percent of all respondents had taken a math level past multivariable calculus/linear algebra; of that 4 percent, 58 percent attended public, non-charter school and 24 percent a non-denominational private school.</p>
-            </li>
-            <li id="study-hours-school-type-tab">
-                <h2>High School Study Hours by School Type</h2>
-                <div id="study-hours-school-type" class="graph"></div>
-                <p>Thirty-nine percent of respondents from public, non-charter schools said they studied for 10 or fewer hours a week, compared to only 17 percent of students from private, non-denominational schools. Of those who studied 10 or fewer hours a week in high school, a majority&mdash;73 percent&mdash;went to a public non-charter school.</p>
+                <p>Respondents who participated in student government were more confident in student government than non-participants.</p>
             </li>
         </ul>
     </div>
