clean and add athletics comments

--- a/jinja2/academics.html.jinja2
+++ b/jinja2/academics.html.jinja2
@@ -205,22 +205,22 @@
             <li id="athletes-raw-tab" class="active">
                 <h2>Athletes at Harvard</h2>
                 <div id="athletes-raw"></div>
-                <p>Twelve percent of incoming freshmen said they were recruited to the College to play a varsity sport, and an additional 8 percent said they plan to walk on to a team. More than a quarter of those prospective walk-ons said they plan to join one of Harvard’s four crew teams. Roughly 20 percent of current Harvard students are members of a varsity athletics team.</p>
+                <p>Nearly 20 percent of those surveyed in the Class of 2018 intend to play varsity sports at Harvard. In addition to the 11 percent of respondents who said they were recruited athletes, 9 percent plan to walk on to a varsity team. Harvard does not offer athletic scholarships to recruited athletes or give out merit scholarships of any kind.</p>
             </li>
             <li id="attrition-athletics-tab">
                 <h2>Likelihood of Playing All Four Years</h2>
                 <div id="attrition-athletics" class="graph"></div>
-                <p>Harvard does not release numbers on the rate of varsity athletes that play all four years. However, surveyed freshmen anticipated playing for their entire college career at different rates depending on their status as an official recruit or a walk-on, with 93 percent of recruits intending to play all four years but just 47 percent of walk-ons planning to do the same.</p>
+                <p>Ninety-three percent of respondents who were recruited athletes reported that it was likely or very likely that they would play for all four years, compared to only 35.2 percent of walk-ons. The University does not report the rate of varsity athletes who play for all four years.</p>
             </li>
             <li id="concussions-tab">
                 <h2>Athletics and Concussions</h2>
                 <div id="concussions" class="graph"></div>
-                <p>Seventy-eight percent of incoming recruited and walk-on athletes have never been concussed. According to Dr. Francis Wang, the head team physician for Harvard Athletics, roughly 55 Harvard athletes incurred a concussion during the 2011-12 season.</p>
+                <p>Similarly to last year’s survey, 78.2 percent of surveyed athletes—including recruits and intended walk-ons—have never been concussed.</p>
             </li>
             <li id="concussions-view-tab">
                 <h2>Effect of Concussions on Attitude Towards Sport</h2>
                 <div id="concussions-view" class="graph"></div>
-                <p>Some incoming recruited and walk-on athletes reported that concussions have affected the way they feel about their sport. Of those who had been concussed, 19 percent reported that concussions had changed their approach or desire to play that sport, compared to 5 percent of incoming athletes overall. Repeated concussions have been linked to chronic traumatic encephalopathy, or CTE, a progressive degenerative brain disease.</p>
+                <p>23 percent of respondents who reported having been concussed said they changed their attitudes toward concussions because of the incident.</p>
             </li>
         </ul>
     </div>
